# ai-tuning-workbench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ai_tuning_workbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/boiler_sim_project/agent/: command_reference.md  context_pack.md  safety_rules.md  tai_system.md  tuning_guide.md  tuning_objective.md
examples/boiler_sim_project/manifests/: metrics_manifest.yaml  project_manifest.yaml  protocol_manifest.yaml
examples/boiler_sim_project/metrics/: boiler_metrics.py
examples/motor_pid_project/agent/: command_reference.md  context_pack.md  safety_rules.md  tai_system.md  tuning_guide.md  tuning_objective.md
examples/motor_pid_project/metrics/: motor_pid_metrics.py
examples/motor_pid_project/runs/2026-05-20_201144_default_run/agent/: command_log.jsonl
tests/: conftest.py  test_cli_basic.py  test_manifest_loading.py  test_metrics_plugin.py  test_protocol_fixed_binary.py  test_window_manager.py
tuner/: __init__.py  cli.py  client.py  daemon.py
tuner/agent/: __init__.py  context.py  logs.py
tuner/backends/: __init__.py  base.py  mock_backend.py  serial_backend.py  sim_backend.py
tuner/config/: __init__.py  loader.py  schema.py
tuner/metrics/: __init__.py  builtin.py  plugin_loader.py
tuner/plotting/: __init__.py  live_plotter.py  plotter.py
tuner/protocol/: __init__.py  checksum.py  codec.py  fixed_binary.py  hex_utils.py
tuner/runtime/: __init__.py  data_access.py  recorder.py  ring_buffer.py  state.py  window_manager.py
tuner/utils/: file_utils.py  time_utils.py
(+177 files in other folders)
